--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,16 @@
+<% include partials/header %> 
+
 <h1>View all dogs</h1>
 
 <!--TODO: Show total results found-->
 
 <% dogs.forEach( dog => { %> 
     <div class="card">
-        <p><%= dog.name %></p> 
-        <p><%= dog.age %></p>
-        <p><%= dog.breed %></p>
-        <p><%= dog.location %></p>
-        <!--TODO: Consider useing Momentjs library for more control over date formatting-->
-        <p><%= dog.dateAdded.toDateString() %></p> 
+        <p><span class="dname"><%= dog.name %></span>, a <%= dog.breed %>, age <%= dog.age %></p> 
+        <p>Location: <%= dog.location %></p>
+        <hr>
     </div>
 <% }); %>
+
+
+<% include partials/footer %> 
