--- a/views/new.ejs
+++ b/views/new.ejs
@@ -3,11 +3,11 @@
 <h1>Add a new dog</h1>
 <form action="/dogs" method="POST">
     <label for="name">Name</label>
-    <input type="text" name="dog[name]" id="name" required>
+    <input type="text" name="dog[name]" id="name" placeholder="Rover" required>
     <label for="age">Age</label>
-    <input type="text" name="dog[age]" id="age" required>
+    <input type="text" name="dog[age]" id="age" placeholder="3" required>
     <label for="breed">Breed</label>
-    <input type="text" name="dog[breed]" id="breed" required>
+    <input type="text" name="dog[breed]" id="breed" placeholder="beagle" required>
 
     <button type="submit">Submit</button>
 </form>
