--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,29 @@
 <% include partials/header %> 
 
-<h1>View all dogs</h1>
-
-<!--TODO: Show total results found-->
-
-<% dogs.forEach( dog => { %> 
-    <div class="card">
-        <img src="<%= dog.image %>" alt="<%= dog.name %>">
-        <p><span class="dname"><%= dog.name %></span>, a <%= dog.breed %>, age <%= dog.age %></p> 
-        <a href="/dogs/<%= dog._id %>">Learn more about <%= dog.name %></a>
-        <hr>
+<div class="container">
+    <div class="row">   
+        <div class="col">
+            <h1>View all dogs looking for a furever home</h1>
+            <a href="/dogs/new">Add a new dog</a>
+        </div> 
     </div>
-<% }); %>
+<!--TODO: Show total results found-->
+    <div class="row">
+        <div class="col-md-4">
+        <% dogs.forEach( dog => { %> 
+            <div class="card">
+                <img class="card-img-top" src="<%= dog.image %>" alt="<%= dog.name %>">
+                <div class="card-body">
+                    <h5 class="card-title"><%= dog.name %></h5>
+                    <h6 class="card-subtitle mb-2 text-muted">a <%= dog.breed %> &vert; age <%= dog.ageYr %> yrs <%= dog.ageMo %> mos</h6>
+                    <p class="card-text">anything else brief...</p>
+                    <a href="/dogs/<%= dog._id %>">Learn more about <%= dog.name %></a>
+                </div>
+            </div>
+        <% }); %>
+        </div>
+    </div>
 
+</div>
 
 <% include partials/footer %> 
