--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,4 +1,11 @@
-.dname {
-    font-weight: 600;
-    font-size: 1.2em;
+.background {
+    background: #ccc;
+    background: url('https://picsum.photos/1400/900?image=1012') top center no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
+
+.jumbotron {
+    background-color: rgba(255,255,255,0.7); 
 }
