--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,10 @@
 <% include partials/header %>
-
-<h1>Welcome to the Dog Rescue App!</h1>
-<h2><a href="/dogs">View all available dogs</a></h2>
-
+<div class="background">
+    <div class="container">
+        <div class="jumbotron text-center">
+            <h1>Welcome to the Dog Rescue App!</h1>
+            <h2><a href="/dogs">View all available dogs</a></h2>
+        </div>
+    </div>
+</div>
 <% include partials/footer %>
