Add bootstrap form styles

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,18 +1,40 @@
-<% include partials/header %> 
+<% include ./partials/header %> 
 
-<h1>Edit <%= dog.name %></h1>
-<form action="/dogs/<%= dog._id %>?_method=PUT" method="POST">
-    <label for="name">Name</label>
-    <input type="text" name="dog[name]" id="name" value="<%= dog.name %>" required>
-    <label for="ageYrs">Age</label>
-    <input type="text" name="dog[ageYr]" id="ageYrs" value="<%= dog.ageYr %>" required>
-    <label for="ageMos">Age in Months</label>
-    <input type="text" name="dog[ageMo]" id="ageMos" value="<%= dog.ageMo %>" required>
-    <label for="breed">Breed</label>
-    <input type="text" name="dog[breed]" id="breed" value="<%= dog.breed %>" required>
-    <label for="image">Image</label>
-    <input type="text" name="dog[image]" id="image" value="<%= dog.image %>" required>
-    <button type="submit">Update</button>
-</form>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                <h1 class="display-2">Edit <%= dog.name %></h1>
+                <form action="/dogs/<%= dog._id %>?_method=PUT" method="POST">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input class="form-control" type="text" name="dog[name]" id="name" value="<%= dog.name %>" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="ageYrs">Age</label>
+                        <input class="form-control" type="text" name="dog[ageYr]" id="ageYrs" value="<%= dog.ageYr %>" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="ageMos">Age in Months</label>
+                        <input class="form-control" type="text" name="dog[ageMo]" id="ageMos" value="<%= dog.ageMo %>" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="breed">Breed</label>
+                        <input class="form-control" type="text" name="dog[breed]" id="breed" value="<%= dog.breed %>" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="description">Story</label>
+                        <textarea class="form-control" id="description" name="dog[description]"><%= dog.description %></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="image">Image</label>
+                        <input class="form-control" type="text" name="dog[image]" id="image" value="<%= dog.image %>" required>
+                    </div>
+                    <button class="btn btn-success" type="submit">Update</button>
+                </form>
+                    
+                <a class="btn btn-secondary" href="/dogs/<%= dog._id %>">Go back</a>
+            </div><!-- .col -->
+        </div><!-- .row --> 
+    </div><!-- .container --> 
 
-<% include partials/footer %>
+<% include ./partials/footer %>
