--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,21 @@
-      
+      <% var date=new Date(); %>
+      <footer class="footer">
+          <blockquote class="blockquote text-center">
+            <p class="mb-0">Saving one dog will not change the world, but surely for that one dog, the world will change forever.</p>
+            <footer class="blockquote-footer">
+              <cite title="Source Title">Karen Davison</cite>
+            </footer>
+          </blockquote>
+          <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                  <p class="text--footer">Furever Homes Dog Rescue <i class="far fa-copyright"></i> &vert; <%= date.getFullYear(); %></p>
+                </div>
+                <div class="col-sm-6 text-right">
+                  <p class="text--footer">made with <i class="fas fa-hand-holding-heart"></i> by kristy</p>
+                </div>
+              </div>
+          </div>
+      </footer>
   </body>
 </html>
