--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -9,3 +9,36 @@
 .jumbotron {
     background-color: rgba(255,255,255,0.7); 
 }
+
+.footer {
+    margin-top: 3.75em;
+}
+
+.blockquote {
+    border-top: 10px double #BDBDBD;
+    border-bottom: 10px double #BDBDBD;
+    padding: 20px 0;
+}
+
+.text--footer {
+    font-size: 1.1em;
+    color: #757575;
+}
+
+.form--delete {
+    display: inline-block;
+}
+
+.form--new + a {
+    margin-top: 2em;
+    margin-bottom: 5em;
+}
+
+.img--profile {
+    max-width: 300px; 
+    height: auto;
+}
+
+.title {
+    padding: 40px 0;
+}
