--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,24 @@
-<h1>Login</h1>
+<% include ./partials/header %>
 
-<form action="/login" method="POST">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" placeholder="your username">
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" placeholder="your chosen password">
-    <button type="submit">Sign in</button>
-</form>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                <h1 class="display-2">Login</h1>
+                
+                <form action="/login" method="POST">
+                    <div class="form-group">
+                        <label for="username">Username:</label>
+                        <input class="form-control" type="text" id="username" name="username" placeholder="your username">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password:</label>
+                        <input class="form-control" type="password" id="password" name="password" placeholder="your chosen password">
+                    </div>
+                    
+                    <button type="submit">Sign in</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+<% include ./partials/footer %>
