--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,20 +1,40 @@
 <% include partials/header %>
 
-<h2><%= dog.name %></h2>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <h2><%= dog.name %></h2>
+            
+            <img class="img--profile" src="<%= dog.image %>" alt="<%= dog.name%>">
+            <p><strong>Breed:</strong> <%= dog.breed %></p>
+        </div><!-- .col --> 
+    
+        <div class="col-md-8">
+            <h3>About <%= dog.name %></h3>
+            <p class="lead">Learn more about this dog's personality. Is he/she housetrained? Good with other dogs? Good with kids? etc...</p>
+            <p><%= dog.description %></p>
+        </div><!-- .col --> 
+    
 
-<img src="<%= dog.image %>" alt="<%= dog.name%>">
-<p><strong>Breed:</strong> <%= dog.breed %></p>
-
-<div>
-    <h3>About <%= dog.name %></h3>
-    <p>Write a short description about this dog's personality. Is he/she housetrained? Good with other dogs? Good with kids? etc...</p>
-</div>
-
-<a href="/dogs/<%= dog._id %>/edit">Edit dog</a>
-
-<form action="/dogs/<%= dog._id %>?_method=DELETE" method="POST">
-    <button type="submit">Delete</button>
-</form>
-
+    </div><!-- .row --> 
+    
+    <!--Only display if user is logged in-->
+    <% if (currentUser) { %> 
+    <div class="row">
+        <div class="col">
+            <a class="btn btn-outline-warning" href="/dogs/<%= dog._id %>/edit">Edit dog</a>
+            
+            <form class="form--delete" action="/dogs/<%= dog._id %>?_method=DELETE" method="POST">
+                <button class="btn btn-outline-danger" type="submit">Delete</button>
+            </form>
+        </div><!-- .col -->
+    </div><!-- .row -->
+    <% } %>
+    <div class="row">
+        <div class="col">
+            <a class="btn btn-outline-primary btn-lg" href="/dogs">See all dogs</a>
+        </div><!-- .col -->
+    </div><!-- .row --> 
+</div><!-- .container -->
 
 <% include partials/footer %>
